--- a/Rolly-Chair-Racing-League/package.json
+++ b/Rolly-Chair-Racing-League/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
+    "saas": "^1.0.0",
+    "sass": "^1.69.5",
     "vite": "^4.4.11"
   }
 }
