--- a/Rolly-Chair-Racing-League/package.json
+++ b/Rolly-Chair-Racing-League/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "mongodb": "^6.2.0",
+    "realm": "^12.3.0",
+    "realm-web": "^2.0.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
